troubleshoot sticky navbar, layout color scheme for dark mode in case study details, and fix background colors for the contact and footer sections

--- a/src/styles/caseStudyDetailPage.css
+++ b/src/styles/caseStudyDetailPage.css
@@ -177,13 +177,12 @@
   position: sticky;
   top: var(--nav-height);
   height: calc(100vh - var(--nav-height));
-
+  color: var(--text-70);
   display: flex;
   flex-direction: column;
   padding: 1rem;
   gap: 2rem;
   background-color: var(--offWhite);
-
   border-right: 1px solid var(--border-secondary);
   overflow-x: hidden;
 }
@@ -196,7 +195,6 @@
   display: flex;
   flex-direction: column;
   flex: 8;
-
   overflow-y: auto;
   min-height: 0;
   border-bottom: 1px solid var(--border-secondary);
