--- a/src/styles/navigation/navbar.css
+++ b/src/styles/navigation/navbar.css
@@ -4,7 +4,7 @@
   border-bottom: 1px solid var(--border-primary);
   position: sticky;
   top: 0;
-  z-index: 10;
+  z-index: 100;
   height: var(--nav-height);
   display: flex;
   justify-content: space-evenly;
