--- a/src/styles/sections/contact.css
+++ b/src/styles/sections/contact.css
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: var(--mainBg);
+  padding-bottom: calc(
+    var(--section-padding-bottom) / 2
+  ); /* use half the original section padding */
 }
 
 .contact-section {
@@ -10,7 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin: 1rem;
+  /* margin: 1rem; */
 }
 
 .contact-subtitle {
